# sd_server

./: CMakeLists.txt  CMakePresets.json
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_debug/.cmake/api/v1/reply/: cache-v2-beecab72003c0457fab5.json  cmakeFiles-v1-253e52599d73b6784d68.json  codemodel-v2-add48d95ef60ab4079ca.json  index-2024-08-03T17-43-51-0636.json  target-sd-server-Debug-edc277a6168b9674d4c1.json
src/: main.cpp
src/soptions/: soptions.cpp  soptions.hpp
